--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,16 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+data/
+.env
+checkpoints/
+chroma_clinical_trials/
+data/
+checkpoints/
+*.sqlite3
+*.sqlite
+__pycache__/
+*.env
+*.env.test
+.DS_Store
